--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff:
+/.idea
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/dictionaries
@@ -24,6 +25,8 @@
 
 ## File-based project format:
 *.iws
+*.iml
+*.ipr
 
 ## Plugin-specific files:
 
